--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ openai = "^1.12.0"
 python-dotenv = "^1.0.0"
 xhtml2pdf = "^0.2.17"
 markdown = "^3.8"
+pytz = "^2025.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
